# goim

./: .gitignore  README.md  docker-consul.sh  go.mod  go.sum  makefile  设计.md
api-gateway/: go.mod  go.sum  main.go
api-gateway/client/: client.go
api-gateway/logic/: base.go  user.go
api-gateway/router/: auth.go  router.go
api-gateway/tests/: user.http
cim/comet/: go.mod  go.sum  (+2 more)
client/: main.go
comet/: application.yml  codec.go  event.go  event_publisher.go  go.mod  go.sum  main.go  type.go
common/: api.go  etcd.go  etcd_test.go  go.mod  model.go  nsq.go
discovery/: go.mod  go.sum
file-server/: main.go
file_server/: go.mod  go.sum
goim/: README.md
im/: application.yml  go.mod  go.sum
im-client/: cleint.http  go.mod  main.go
im-comet/: go.mod
im-common/: go.mod
im-connect/: go.mod
im-core/: CMakeLists.txt  application.yml  go.mod  go.sum  main.go  表设计.txt
im-core/config/: init.go
im-core/dao/: message.go
im-core/handler/: server_wapper.go  work.go  work_rsp_wapper.go
im-core/model/: message.go  user.go
im-core/route/: map.go
im-core/rpc/: message.go  rpc_server.go  user.go
im-core/tests/: db_test.go  obj_test.go
im-job/: go.mod
im-logic/: go.mod
logic/: application.yml  go.mod  main.go
logic-user/: application.yml  go.mod  go.sum  main.go
protocols/: go.mod
route/: application.yml  go.mod  main.go
tests/: go.mod
utils/: aes.go  base.go  config.go  db_auto.go  define.go  go.mod  go.sum  jwt.go  map.go  protocol.go  time.go
web/: go.mod  go.sum  main.go
web-ui/: README.md  package-lock.json  package.json
(+295 files in other folders)
